# cmParser

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
claudedocs/: gui_packaging_design.md  ibk_field_mapping.md
docs/: 읽어보세요.txt
fixtures/ibk/: README.md
fixtures/laina/: README.md
scripts/: build_exe.ps1  dump_docx.py  dump_xlsx.py  run_pipeline.py
src/chaekmu_parser/: classifier.py  models.py  normalizer.py  validator.py  xlsx_writer.py
src/chaekmu_parser/extractors/: __init__.py  base.py  docx_extractor.py
src/chaekmu_parser_gui/: __init__.py  __main__.py  app.py  logging_setup.py  report_window.py  workers.py
templates/: chaekmu_template.xlsx
tests/: test_classifier.py  test_docx_extractor.py  test_e2e_ibk.py  test_gui_logging.py  test_gui_report_window.py  test_gui_worker.py  test_normalizer_ibk.py  test_obligation_variants.py  test_safety_guards.py  test_validator.py  test_xlsx_writer_smoke.py
